--- a/zprefix-blog-app/public/index.html
+++ b/zprefix-blog-app/public/index.html
@@ -26,7 +26,11 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <!-- 
+    Brittle to set color rather than grab it from antd stylesheet but
+    I'm stumped on how to do that and it'll get the job down for now
+  -->
+  <body style="background-color: #f0f2f5">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
